--- a/frontend/src/styles/PostList.scss
+++ b/frontend/src/styles/PostList.scss
@@ -57,3 +57,22 @@
     margin-bottom: 0;
   }
 }
+
+.post-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  .delete-btn {
+    background: none;
+    border: none;
+    font-size: 1rem;
+    cursor: pointer;
+    color: #888;
+    transition: 0.2s;
+
+    &:hover {
+      color: red;
+    }
+  }
+}
