--- a/frontend/src/styles/PostList.scss
+++ b/frontend/src/styles/PostList.scss
@@ -66,13 +66,28 @@
   .delete-btn {
     background: none;
     border: none;
-    font-size: 1rem;
+    font-size: 1.3rem;
     cursor: pointer;
     color: #888;
     transition: 0.2s;
+    font-family: "GangwonEduSaeeum_OTFMediumA";
 
     &:hover {
       color: red;
+    }
+  }
+
+  .update-btn {
+    background: none;
+    border: none;
+    font-size: 1.3rem;
+    cursor: pointer;
+    color: #888;
+    transition: 0.2s;
+    font-family: "GangwonEduSaeeum_OTFMediumA";
+
+    &:hover {
+      color: blue;
     }
   }
 }
