--- a/frontend/src/styles/PostForm.scss
+++ b/frontend/src/styles/PostForm.scss
@@ -39,7 +39,7 @@
     &::placeholder {
       color: #aaa;
       font-family: "GangwonEduSaeeum_OTFMediumA"; // placeholder에만 적용할 폰트
-      font-size: 1.05rem;
+      font-size: 1.3rem;
     }
   }
 
@@ -62,10 +62,12 @@
       background-color: #ff6699;
       color: white;
       border: none;
-      padding: 0.5rem 1.2rem;
+      padding: 0.3rem 1.2rem;
       border-radius: 9999px;
-      font-weight: bold;
+      // font-weight: bold;
       cursor: pointer;
+      font-size: 1.3rem;
+      font-family: "GangwonEduSaeeum_OTFMediumA";
       transition: 0.2s;
 
       &:hover {
@@ -87,12 +89,11 @@
       display: inline-block;
       background-color: #f08fa2;
       color: white;
-      font-size: 0.9rem;
-      padding: 0.5rem 1rem;
+      font-size: 1.3rem;
       border-radius: 8px;
       cursor: pointer;
-      font-weight: bold;
       transition: background-color 0.2s;
+      padding: 0.4rem;
 
       &:hover {
         background-color: #e06c88;
@@ -104,6 +105,7 @@
       left: 0;
       top: 0;
       opacity: 0;
+
       cursor: pointer;
       height: 100%;
       width: 100%;
